# ToPKerst

admin/: README.md  package-lock.json  package.json
admin/src/: App.vue
admin/src/components/: TopNav.vue
admin/src/router/: index.js
admin/src/views/: Home.vue  People.vue  Questions.vue
backend/: config.ini  main.py  pyproject.toml  setup.sh  test.py
backend/topkerst/api/: server.py
backend/topkerst/api/routers/: admin_router.py  user_router.py
backend/topkerst/handlers/: db_handler.py
backend/topkerst/utils/: parameters.py
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/router/: index.js
frontend/src/views/: Loading.vue  Results.vue  Selecting.vue  WaitForResults.vue
