[tool.poetry]
name = "Dashboard_Backend"
version = "0.1.0"
description = ""
authors = ["I_Cheered <tjeerd992@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
loguru = "^0.5.3"
ConfigArgParse = "^1.3"
rethinkdb = "^2.4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
